# hooded-crow-modeller

./: CLAUDE.md  Cargo.toml  README.md  example.enriched.toml  example.toml  lib_backup.rs  mesh.json  mesh.toml  output.glb  run.sh  test_ruler.toml  test_ruler_simple.rs  triangle_example.toml
src/: lib.rs  lib.rs.bak  lib.rs.clean
