[package]
name = "hooded-crow-modeller"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
gltf = "1.4"
bevy = "0.12.1"
notify = "6.1"
notify-debouncer-mini = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
gltf-json = "1.4.1"