[package]
name = "hooded-crow-modeller"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_egui = "0.28"
gltf = { version = "1.4.0", features = ["utils"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.14.3"
toml = "0.7.8"
minijinja = "2.0"